# HAR-Transformer

./: .gitignore  README.md  data_augmentation.ipynb  pyproject.toml
notebooks/: data_augmentation.ipynb  test.ipynb  train.ipynb
